--- a/app/views/users/_photos_tab.html.erb
+++ b/app/views/users/_photos_tab.html.erb
@@ -5,7 +5,7 @@
 </div>
 
 <% photos.each do |photo| %>
-  <div class="row mb-4">
+  <div id="<%= dom_id(photo) %>_row" class="row mb-4">
     <div class="col-md-6 offset-md-3">
       <%= render "photos/photo", photo: photo %>
     </div>
