--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,5 +5,6 @@
 </div>
 
 <% if policy(@user).show? %>
+  <!-- added Ajax functionality to the delete photos feature -->
   <%= render "users/photos_tab", user: @user, photos: @user.own_photos %>
 <% end %>
